--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 body {
   
-  background-image: url(image/fondo.jpg) ;
+  background-image: url(../rockmx/image/fondo.jpg) ;
   background-attachment: fixed;
     background-size: auto 100%;
     background-position: center;
